[package]
name = "furnace"
version = "0.2.0"
description = "A library for building GUI application, heavily inspired from React, Redux, and Relm."
readme = "../README.md"
repository = "https://github.com/Kroisse/furnace"
categories = [
    "gui",
]
authors = ["Eunchong Yu <kroisse@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
arc-swap = "0.3"
crossbeam-channel = "0.3"
failure = "0.1.5"
log = "0.4"
tokio = "0.1.21"
